feat!: add qodana and codeql workflows, fix api key scopes, cleanup logback config